syntax = "proto3";

message User {
    string username = 1;
    string email = 2;
    string password = 3;
}

message LoginRequest{
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message RegisterResponse {
    bool ok = 1;
}

message SignoutRequest {
    uint32 id = 1;
}

message SignoutResponse {
    bool ok = 1;
}

message VerifyTokenRequest {
    string token = 1;
}

message VerifyTokenResponse {
    bool ok = 1;
}

message GetAllUsersRequest {}

message GetAllUsersResponse {
    repeated User users = 1;
}

message GetUserRequest {
    string username = 1;
}

message GetUserResponse {
    User user = 1;
}

service Auth {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Signout(SignoutRequest) returns (SignoutResponse);
    rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenResponse);
    rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
}